--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/middleware-retry": "^3.374.0",
     "@aws-sdk/s3-request-presigner": "^3.701.0",
     "@smithy/middleware-retry": "^3.0.28",
+    "better-sqlite3": "^11.9.1",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
